fixed piece height on smaller devices and possible move signs covering up pieces

--- a/src/components/chess/board/square/square.scss
+++ b/src/components/chess/board/square/square.scss
@@ -15,7 +15,7 @@ $height: calc(90vh / 8);
 		background-color: wheat;
 	}
 
-	.available-sign {
+	.possible-move {
 		cursor: pointer;
 		height: 100%;
 		
