--- a/src/components/chess/chess.scss
+++ b/src/components/chess/chess.scss
@@ -1,6 +1,6 @@
 @use './board/square/square.scss' as square;
 
-.chess {
+#chess {
 	display: flex;
 	align-self: center;
 }
